--- a/films.html
+++ b/films.html
@@ -27,7 +27,7 @@
         <ul id="dustinwind">
             <li>戀戀風塵 Dust in wind</li>
             <li>
-                <a href="#"><img src="http://artist.nccu.edu.tw/images/films/flm_1.jpg" alt="戀戀風塵"></a>
+                <a href="https://103306079.github.io/WebAssign1/film_01.html"><img src="http://artist.nccu.edu.tw/images/films/flm_1.jpg" alt="戀戀風塵"></a>
                 <img src="http://artist.nccu.edu.tw/images/films/ink2.png" alt="榮耀經典"></li>
             <li><strong>03/15</strong> (三) 19:30-21:30</li>
             <li>導演：侯孝賢</li>
