--- a/reg.html
+++ b/reg.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 
 <head>
     <meta charset="utf-8">
@@ -41,7 +41,7 @@
             <br>
             <br>
             <label for="birthday">生日</label>&nbsp;
-            <input type="date" name="entry.324774019" id="birthday" placeholder="生日">
+            <input type="date" name="entry.324774019" id="birthday">
             <br>
             <br>
 <!--             <label for="id">學號</label>&nbsp;
