--- a/film_01.html
+++ b/film_01.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 
 <head>
     <meta charset="utf-8">
@@ -17,7 +17,7 @@
     <br>
     <aside>
         <section>
-            <img src="http://artist.nccu.edu.tw/images/films/flm_1.jpg" alt="戀戀風塵"></a>
+            <img src="http://artist.nccu.edu.tw/images/films/flm_1.jpg" alt="戀戀風塵">
             <img src="http://artist.nccu.edu.tw/images/films/ink2.png" alt="榮耀經典">
             <h3>戀戀風塵 Dust in wind</h3>
             <p>
